--- a/practicum2_gridsearchcv_xgboost_models_4.ipynb
+++ b/practicum2_gridsearchcv_xgboost_models_4.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Predicting Health Charges"
+    "# Analysis of Crime Reports in the City and County of Denver"
    ]
   },
   {
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### GridSearchCV with XGBoost Regression"
+    "### GridSearchCV with XGBoost Classification"
    ]
   },
   {
